2006-03-14  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  back to CVS.

=== release 0.10.5 ===

2006-03-13  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.10.5, "Net"

2006-03-13  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/plugins/Makefile.am:
	  Part of previous cdparanoiasrc docs fixes, forgot to commit.
	  
2006-03-12  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/plugins/gst-plugins-base-plugins-docs.sgml:
	* docs/plugins/gst-plugins-base-plugins-sections.txt:
	* docs/plugins/gst-plugins-base-plugins.hierarchy:
	  Add cdparanoiasrc to docs.

	* gst-libs/gst/cdda/gstcddabasesrc.c:
	  More GstCddaBaseSrc docs.

2006-03-12  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/libs/gst-plugins-base-libs-sections.txt:
	* gst-libs/gst/tag/gstid3tag.c: (gst_tag_from_id3_user_tag):
	* gst-libs/gst/tag/tag.h:
	  Add new API to libgsttag: gst_tag_from_id3_user_tag().

2006-03-11  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	  NULL-terminate array of mpeg4 video file extensions.
	  Fixes crash on PPC (#334226).

2006-03-11  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/gnomevfs/gstgnomevfssrc.c:
	(gst_gnome_vfs_src_check_get_range):
	  gnome_vfs_uri_is_local() alone is not a good indicator
	  whether we can operate in pull-mode with a specific URI,
	  as it returns FALSE for file:// URIs that point to an
	  NFS-mounted path. Be more conservative here: whitelist
	  local files, blacklist http URIs and use the old
	  mechanism for anything else (fixes #334216).

2006-03-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to trunk

=== release 0.10.4 ===

2006-03-10  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.10.4, "Power"

2006-03-10  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst-libs/gst/video/gstvideosink.c: (gst_video_sink_init):