@@ -104,7 +104,8 @@ gst_video_sink_init (GstVideoSink * videosink)
   videosink->width = 0;
   videosink->height = 0;
 
-  gst_base_sink_set_max_lateness (GST_BASE_SINK (videosink), -1);
+  /* 20ms is more than enough, 80-130ms is noticable */
+  gst_base_sink_set_max_lateness (GST_BASE_SINK (videosink), 20 * GST_MSECOND);
 }
 
 static void
