@@ -1,3 +1,13 @@
+2006-03-14  Wim Taymans  <wim@fluendo.com>
+
+	* gst-libs/gst/video/gstvideofilter.c: (gst_video_filter_init):
+	* gst-libs/gst/video/gstvideosink.c: (gst_video_sink_init):
+	* gst/ffmpegcolorspace/gstffmpegcolorspace.c: (gst_ffmpegcsp_init):
+	* gst/videoscale/gstvideoscale.c: (gst_video_scale_class_init),
+	(gst_video_scale_init), (gst_video_scale_src_event):
+	Re-enable QoS after the release.
+	Rework videoscale to use the base class src_event handler.
+
 2006-03-14  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* configure.ac:
